Changes from DW

--- a/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
@@ -22,11 +22,10 @@ More information about Ant is available at <a href="http://jakarta.apache.org/an
 Builds</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-89.htm"><br>
 Running Ant</a></p>
+<p>
+<img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12"> 
 
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
-
 
 </BODY>
 </HTML>
