--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
@@ -39,8 +39,8 @@ the workspace as a whole.&nbsp;Specific files and folders cannot be built. There
   <li>
 Automatic builds are performed as resources are saved. Automatic builds are always incremental and always operate
     over the 
-entire workspace. You can configure your workbench preferences (<b>Workbench
-    &gt; Preferences</b>) to perform builds automatically on resource
+entire workspace. You can configure your workbench preferences (<b>Window
+    &gt; Preferences &gt; Workbench</b>) to perform builds automatically on resource
     modification.&nbsp;</li>
   <li>
 Manual builds are initiated when you explicitly select a menu item or press the
@@ -53,10 +53,9 @@ Building resources</a><br>
 </a><a href="../tasks/tasks-16.htm">Performing builds automatically<br>
 </a><a href="../tasks/tasks-17.htm">Saving resources automatically before a manual build</a><a href="../tasks/tasks-14.htm"><br>
 Changing build order</a></p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+<p><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
 </p>
+
 
 </BODY>
 </HTML>
