--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-14.htm
@@ -12,13 +12,13 @@
 Changing build order</H1>
 <p CLASS="Para">By default, the workbench computes the build order by
 interpreting project references as prerequisite relationships. Alternatively, you can explicitly define the order in which projects are built.</p>
-<p CLASS="Para">The Build Order Preferences page allows you to disable the <b> Use Defaults</b> option so that you can
+<p CLASS="Para">The Build Order Preferences page allows you to disable the <b>Use default build order</b> option so that you can
 access to the projects list and manipulate the order of it.&nbsp;</p>
 <p CLASS="Para">To define the order in which the workbench performs builds on projects:</p>
 <ol>
   <li>
 <P CLASS="Para">
-Click <b>Workbench</b> &gt; <b>Preferences</b> to open the Preferences page.</P>
+Click <b>Window </b> &gt; <b>Preferences</b> to open the Preferences page.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -27,7 +27,7 @@ Preferences page opens, listing the projects for the build.&nbsp;</P>
   </li>
   <li>
 <P CLASS="Para">
-Ensure that the <b>Use Defaults</b> check box is cleared. If it is selected, the 
+Ensure that the <b>Use default build order</b> check box is cleared. If it is selected, the 
 buttons on this page are disabled, and builds are performed in the order of the 
 project list.</P>
   </li>
@@ -53,7 +53,7 @@ Builds</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-73.htm"><br>
 </a><a href="tasks-75.htm">Performing builds manually<br>
 </a><a href="tasks-16.htm">Performing builds automatically</a></p>
-<p><img src="../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12"></p>
+<p><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12"></p>
 <P CLASS="Para">
 &nbsp;</P>
 
