--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-16.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-16.htm
@@ -16,7 +16,7 @@ resources are saved:</P>
 <ol>
   <li>
 <P CLASS="Para">
-Click <b>Workbench</b> &gt; <b>Preferences</b>.</P>
+Click <b>Window</b> &gt; <b>Preferences</b>.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -43,7 +43,7 @@ Builds</a></p>
 <a href="tasks-75.htm">Performing builds manually<br>
 </a><a href="tasks-14.htm">
 Changing build order</a></p>
-<p><img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<p><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
 </p>
 
 
