--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-17.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-17.htm
@@ -16,12 +16,12 @@ done:</P>
 <ol>
   <li>
 <P CLASS="Para">
-Click <b>Workbench</b> &gt; <b>Preferences</b> to open the Workbench Preferences 
-page.</P>
+Click <b>Window</b> &gt; <b>Preferences</b>.</P>
   </li>
   <li>
 <P CLASS="Para">
-Select the <b>Workbench</b> category in the left pane.</P>
+Select the <b>Workbench</b> category in the left pane to open the Workbench Preferences 
+page.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -42,6 +42,8 @@ Building resources</a><br>
 <a href="tasks-75.htm">Performing builds manually<br>
 </a><a href="tasks-14.htm">
 Changing build order</a></p>
+<p><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
+</p>
 
 
 </BODY>
