--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-75.htm
@@ -16,26 +16,21 @@ The disadvantage of manual building is that tasks generated to indicate build er
 output (for example, before running your Java program).&nbsp; </P>
 <p>
 <b>Note</b>: Some of the menu items described below are only available when 
-the automatic build preference is disabled by selecting <b>Workbench &gt;
+the automatic build preference is disabled by selecting <b>Window &gt;
 Preferences</b> &gt; <b>Workbench</b>.&nbsp;</p>
 <p CLASS="Para">To build only selected projects:</p>
 <ol>
-  <li>In the Navigator view of the Resource perspective, or in the Packages view
-    of the Java perspective, select one or 
+  <li>In the Navigator view of the Resource perspective, select one or 
 more projects.
   </li>
   <li>
-Right-click and select one of the following options from the pop-up menu:
-<ul>
-  <li>Select <b>Build Project </b>to do an incremental build.</li>
-  <li>Select <b>Rebuild Project</b> to do a full build.</li>
-</ul>
+Right-click and select the option <b>Rebuild Project</b> from the pop-up menu.
   </li>
 </ol>
 <p>To build all projects in the workspace:</p>
 <ul>
-  <li>Click <b>Workbench</b> &gt; <b>Build</b> for an incremental build.</li>
-  <li>Click <b>Workbench &gt; Rebuild All </b>for a full build.</li>
+  <li>Click <b>Project &gt; Rebuild Project</b> for an incremental build.</li>
+  <li>Click <b>Project &gt; Rebuild All </b>for a full build.</li>
 </ul>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-22.htm"><br>
 Builds</a></p>
@@ -43,7 +38,7 @@ Builds</a></p>
 <a href="tasks-17.htm">Saving resources automatically before a manual build</a><br>
 <a href="tasks-14.htm">Changing build order</a><a href="tasks-73.htm"><br>
 </a><a href="tasks-16.htm">Performing builds automatically</a></p>
-<p><img src="../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12"></p>
+<p><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12"></p>
 <p>&nbsp;</p>
 
 
