--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -31,11 +31,11 @@ field.</p>
   </li>
   <li>
 <p CLASS="Para">If you want output from the script to display in a console in 
-the workbench, select <b>Display execution log to Ant console</b> check box. </p>
+the workbench, select <b>Show execution log in console</b> check box. </p>
   </li>
   <li>
 <p CLASS="Para">Click <b>Finish</b> to close the wizard. If you selected the 
-check box in the previous step, the Ant Console displays any applicable execution results 
+check box in the previous step, the Log Console displays any applicable execution results 
 after the script runs.</p>
   </li>
 </ol>
@@ -44,7 +44,7 @@ after the script runs.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-22.htm"><br>
 </a><a href="../concepts/cantsup.htm">Ant support<br>
 </a><a href="../concepts/concepts-22.htm">Builds</a></p>
-<p><img src="../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12"></p>
+<p><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12"></p>
 <P>&nbsp;
 </P>
 
