updated rename type pic

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-95.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-95.htm
@@ -12,8 +12,8 @@
 <h1 CLASS="Head">
 Parameters page</h1>
 
-<div CLASS="Figure"><img SRC="../images/tasks-30.gif" NOSAVE height=384 width=332>
-<div CLASS="FigureTitle">Rename Field Parameters Page</div>
+<div CLASS="Figure"><img SRC="../images/tasks-30.gif" NOSAVE height=317 width=340>
+<div CLASS="FigureTitle">Rename Type Parameters Page</div>
 </div>
 
 <ul CLASS="UnorderedList">
