Doc update for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -211,13 +211,9 @@ Remove All Terminated</SPAN>
 </TABLE>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 
 </P>
-
-
-
-
 
 </BODY>
 </HTML>
