--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -111,8 +111,7 @@ System.getProperties()</SPAN>.</P>
 <TD valign="top" align="left">
 <P CLASS="Para">
 Select the entire line you just typed and select <SPAN CLASS="Label">
-Display from its context menu</SPAN>
- to evaluate the expression. </P>
+Display from the context menu (or select the equilvalent item the editor toolbar or Run menu).</SPAN></P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-80.gif" width="331" height="418">
@@ -128,7 +127,8 @@ Display from its context menu</SPAN>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-The result of the evaluation is highlighted in the scrapbook page.</P>
+When the evaluation completes, the result of the evaluation is highlighted in the scrapbook page.</P>
+<p>Note:	Snippets can be inspected and run in a similar manner.</P>
 </TD>
 </TR>
 <TR>
@@ -153,10 +153,6 @@ Yes</SPAN>
 <img src = ../ngibmcpy.gif width="195" height="12">
 
 </P>
-
-
-
-
 
 </BODY>
 </HTML>
