Doc update for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -196,7 +196,7 @@ Terminate</SPAN>
 </TABLE>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 
 </P>
 
