--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -111,7 +111,7 @@ The Expressions view opens with the value of the evaluated expression.</P>
 </TABLE>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 
 </P>
 
