--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -150,7 +150,7 @@ Yes</SPAN>
 </TABLE>
 <P>&nbsp;<br>
 
-<img src = ../ngibmcpy.gif width="195" height="12">
+<img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 
 </P>
 
