Changes from DW

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-14.htm
@@ -53,7 +53,8 @@ Builds</a></p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-73.htm"><br>
 </a><a href="tasks-75.htm">Performing builds manually<br>
 </a><a href="tasks-16.htm">Performing builds automatically</a></p>
-<p><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12"></p>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
+</p>
 <P CLASS="Para">
 &nbsp;</P>
 
