--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-16.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-16.htm
@@ -43,7 +43,7 @@ Builds</a></p>
 <a href="tasks-75.htm">Performing builds manually<br>
 </a><a href="tasks-14.htm">
 Changing build order</a></p>
-<p><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
 </p>
 
 
