--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-73.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-73.htm
@@ -25,7 +25,7 @@ Builds</a></p>
 </a><a href="tasks-16.htm">Performing builds automatically<br>
 </a><a href="tasks-17.htm">Saving resources automatically before a manual build</a></p>
 <P CLASS="Intro">
-<img align="texttop" src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
+<a href="../hglegal2002.htm"><img align="texttop" src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
 
 
 </BODY>
