--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-74.htm
@@ -21,7 +21,7 @@ enabled. </P>
 To enable automatic building see <a href="tasks-16.htm">Perform
 Automatic Builds</a>.</P>
 <P>
-<img align="texttop" src = ../images/ngibmcpy2002.gif width="195" height="12">
+<a href="../hglegal2002.htm"><img align="texttop" src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
 </P>
 
 
