--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-7.htm
@@ -174,8 +174,8 @@ editor to inform about a syntax or semantic problem.</td>
 <div CLASS="Para"><b>12.</b></div>
 </td>
 
-<td>On the left border of the editor a light pulp marker shows up. The
-light pulp signals that a correction proposal is available.
+<td>On the left border of the editor a light bulb marker shows up. The
+light bulb signals that a correction proposal is available.
 <br><img SRC="../images/qs-37a.gif" NOSAVE height=186 width=502></td>
 </tr>
 
@@ -186,7 +186,7 @@ light pulp signals that a correction proposal is available.
 
 <td>Set the cursor inside the marked range and choose&nbsp;<span CLASS="Label">Quick
 Fix</span> from the Edit menu bar. You can also press CTRL + 1 or left
-click the light pulp. A selection dialog shows up proposing possible corrections.
+click the light bulb. A selection dialog shows up proposing possible corrections.
 <br><img SRC="../images/qs-37b.gif" NOSAVE height=304 width=750></td>
 </tr>
 
