--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -171,7 +171,7 @@ editor.
 <td><b>14.</b></td>
 
 <td>container is marked with the temporary problem line as it is not defined
-yet. The light pulp shows up on the left side of the editor.
+yet. A light bulb shows up on the left side of the editor.
 <br>Set the cursor inside 'Vector' and&nbsp; press CTRL + 1 (or use Edit
 > Quick Fix from the menu bar).
 <br>Choose 'Import java.util.Vector'. This adds the missing import declaration.
