better name from hide inner types

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-2.htm
@@ -23,7 +23,7 @@ src="..\images\ngrelc.gif" alt="Related concepts" border=0></p>
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
 
 <p><a href="tasks-3.htm">Showing and hiding system files</a><br>
-<a href="tasks-4.htm">Showing and hiding inner types</a>&nbsp;<br>
+<a href="tasks-4.htm">Showing and hiding CLASS files generated for inner types</a>&nbsp;<br>
 <a href="tasks-5.htm">Showing and hiding libraries</a><br>
 <a href="tasks-6.htm">Showing single elements or whole files</a></p>
 
