*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-18.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-18.htm
@@ -20,7 +20,8 @@
 is displayed at the top of
 the workbench window, directly beneath the menu bar. The contents of this toolbar change based on the active editor.&nbsp;Items in the toolbar
 might be enabled or disabled based on
-the state of either the active view or editor.</p>
+the state of either the active view or editor. Sections of the main toolbar can be rearranged using the mouse.
+</p>
 
 
 <p CLASS="Para" Label="Type">There are also individual <i>view toolbars</i>,
@@ -41,8 +42,10 @@ list of related reference topics below for a table of all toolbar buttons.</p>
 <a href="concepts-2.htm"><br>
 </a><a href="concepts-4.htm">Perspectives<br>
 </a><a href="concepts-21.htm">Fast views</a></p>
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-9b.htm"><br>
-Creating fast views</a></p>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<a href="../tasks/tasks-9b.htm"><br>Creating fast views</a>
+<a href="../tasks/ttoolbars.htm"><br>Rearranging the main toolbar</a>
+</p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
 <a href="../reference/ref-68.htm">Toolbar buttons</a></p>
 
