--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
@@ -143,7 +143,11 @@ Navigator in the project JaneQUser2.</P>
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<br>
+<P>&nbsp;<P><a href="qs-32.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Deleting resources</a><P><a href="qs-31b.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Drag and drop or copy and paste</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
