--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34a.htm
@@ -29,8 +29,13 @@ contains the following resources:</p>
     <p CLASS="Para" align="center"><img align="texttop" border="0" src="../images/Image44_confirm_state.jpg" align="left" width="204" height="213"></p>
   </blockquote>
 </blockquote>
-<P>&nbsp;
-</P>
+
+
+<P><a href="qs-34b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+External editors</a><P><a href="qs-32.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Deleting resources</a><br>
 
 
 <P>
