--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24a.htm
@@ -24,7 +24,15 @@ Exporting files </h2>
   <li>
     using the export wizard.</li>
 </ul>
-<P>&nbsp;<br>
+
+
+<P><a href="qs-24b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Drag and drop or copy and paste</a>
+<p><a href="qs-13.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Show me the files</a><br>
+</p>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
