--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-24b.htm
@@ -69,7 +69,14 @@ choosing Edit &gt; Copy, then
 </TR>
 </TBODY>
 </TABLE>
-<P><br>
+
+
+<P><a href="qs-24c.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Export wizard</a>
+<P><a href="qs-24a.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Exporting files</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
