--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31a.htm
@@ -24,7 +24,14 @@ You can import files into the workbench either by :</P>
 <p CLASS="Para">
 In this section we will import the two files we just exported and place them
 into our second project JaneQUser2.</p>
-<P>&nbsp;<br>
+
+
+<P><a href="qs-31b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Drag and drop or copy and paste</a><P><a href="qs-24c.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Export wizard</a><br>
+<br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
