--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31b.htm
@@ -80,7 +80,11 @@ then selecting the destination in the Navigator and&nbsp;
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<br>
+<P>&nbsp;<P><a href="qs-31c.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Import wizard</a><P><a href="qs-31a.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Importing files</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
