--- a/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/taccess.htm
@@ -72,10 +72,10 @@ on the Help view's toolbar. To show it, click the button again.</p>
 <img border="0" src="../images/ngrelt.gif" alt="Related tasks" WIDTH="159" HEIGHT="27"><br>
 <a href="tsearch.htm">Searching online help</a><br>
 <a href="tf1help.htm">Accessing context-sensitive help</a></p>
-<p>
-<img align="texttop" src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
 
 </body>
-
 </html>
