--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-74.htm
@@ -20,10 +20,10 @@ enabled. </P>
 <P CLASS="Para">
 To enable automatic building see <a href="tasks-16.htm">Perform
 Automatic Builds</a>.</P>
-<P>
-<a href="../hglegal2002.htm"><img align="texttop" src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
-</P>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
