--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-17.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-17.htm
@@ -42,9 +42,10 @@ Building resources</a><br>
 <a href="tasks-75.htm">Performing builds manually<br>
 </a><a href="tasks-14.htm">
 Changing build order</a></p>
-<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
-</p>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
