--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-73.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-73.htm
@@ -24,9 +24,10 @@ Builds</a></p>
 </a><a href="tasks-75.htm">Performing builds manually<br>
 </a><a href="tasks-16.htm">Performing builds automatically<br>
 </a><a href="tasks-17.htm">Saving resources automatically before a manual build</a></p>
-<P CLASS="Intro">
-<a href="../hglegal2002.htm"><img align="texttop" src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
