--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-75.htm
@@ -38,10 +38,10 @@ Builds</a></p>
 <a href="tasks-17.htm">Saving resources automatically before a manual build</a><br>
 <a href="tasks-14.htm">Changing build order</a><a href="tasks-73.htm"><br>
 </a><a href="tasks-16.htm">Performing builds automatically</a></p>
-<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
-</p>
-<p>&nbsp;</p>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
