--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -44,11 +44,10 @@ after the script runs.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/concepts-22.htm"><br>
 </a><a href="../concepts/cantsup.htm">Ant support<br>
 </a><a href="../concepts/concepts-22.htm">Builds</a></p>
-<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a>
-</p>
-<P>&nbsp;
-</P>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
