--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -157,9 +157,9 @@ button to see a menu or click on the button to edit the history list.
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">Select from the menu bar Window > Preferences. Go to<span CLASS="Label">Java</span>
-and select&nbsp;<span CLASS="Label">Open a new Type Hierarchy Perspective</span>
-. Then click&nbsp;<span CLASS="Label">OK</span>.</div>
+<div CLASS="Para">Select from the menu bar Window > Preferences. Go to&nbsp;<span CLASS="Label">Java</span>
+and select&nbsp;<span CLASS="Label">Open a new Type Hierarchy Perspective</span>.
+Then click&nbsp;<span CLASS="Label">OK</span>.</div>
 </td>
 </tr>
 
