*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-48b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-48b.htm
@@ -4,7 +4,7 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Showing or hiding system files or generated class files in the Navigator
+<title>Showing or hiding files in the Navigator
 view</title>
 
 </HEAD>
@@ -13,7 +13,7 @@ view</title>
 Showing or hiding files in the Navigator view</H1>
 <P CLASS="Para">You can choose to hide system files or generated class files in
 the Navigator view. (System files are those have only a file extension but no file
-name, for example .classpath.)</P>
+name, for example .classpath.). In addition, you can restrict the displayed files to a working set.</P>
 <ol>
   <li>
     <p CLASS="Para">On the toolbar for the Navigator view, click the <b>Menu</b>
@@ -23,12 +23,21 @@ name, for example .classpath.)</P>
     <p CLASS="Para">Select <b>Filter</b>.&nbsp;</li>
   <li>
     <p CLASS="Para">In the dialog box that opens, select the checkboxes for the
-    types of files that you want to hide.</li>
+    types of files that you want to hide.</p>
+  </li>
+  <li>
+    <p CLASS="Para">To restrict the displayed files to a working set select the
+    checkbox at the bottom of the dialog box.
+    You may select a working set from the list of most recently used working sets 
+    or choose a different one or create a new one by selecting the <b>Other</b> button.
+    </p>
+  </li>
 </ol>
 <P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/cnav.htm"><br>
 </a><a href="../concepts/concepts-12.htm">Resources<br>
-</a><a href="../concepts/concepts-17.htm">Resource hierarchies</a><a href="../concepts/cnav.htm"><br>
-Navigator view</a>
+</a><a href="../concepts/concepts-17.htm">Resource hierarchies</a>
+<a href="../concepts/cnav.htm"><br>Navigator view</a>
+<a href="../concepts/cworkset.htm"><br>Working sets</a>
 </P>
 
 
