--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-84b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-84b.htm
@@ -34,7 +34,10 @@ If you close the Search view, you can return to it later by selecting <b>Window
 &gt; Show View &gt; Other &gt; Basic &gt; Search</b>.</p>
 <p>
 </p>
-<p class="Para"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="../concepts/csearchview.htm"><br>Search view</a><br></p>
+<p class="Para"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<a href="../concepts/csearchview.htm"><br>Search view</a>
+<a href="../concepts/cworkset.htm"><br>Working sets</a>
+</p>
 <p class="Para"><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 
 <a href="tasks-84.htm">Text searching</a></p>
